finalizado html y css

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							<h1>Disfruta de los mejores platos<br>de manera saludable</h1>
 						</div>
 						<div class="col-auto slider-info-cta">
-							<button class="btn btn-principal">RESERVAR</button>
+							<button class="btn btn-lg btn-principal">RESERVAR</button>
 						</div>
 					</div>
 				</div>
