--- a/producto.html
+++ b/producto.html
@@ -165,10 +165,10 @@
 								</div>
 								<ul class="row slider-gallery-thumbnails">
 									<li class="col"><img class="img-responsive shadow" src="img/tomate-aguacate.jpg" alt=""></li>
-									<li class="col"><img class="img-responsive shadow" src="img/tomate-aguacate.jpg" alt=""></li>
-									<li class="col"><img class="img-responsive shadow" src="img/tomate-aguacate.jpg" alt=""></li>
-									<li class="col"><img class="img-responsive shadow" src="img/tomate-aguacate.jpg" alt=""></li>
-									<li class="col"><img class="img-responsive shadow" src="img/tomate-aguacate.jpg" alt=""></li>
+									<li class="col"><img class="img-responsive shadow" src="img/espaguetti.jpg" alt=""></li>
+									<li class="col"><img class="img-responsive shadow" src="img/ensalada.jpg" alt=""></li>
+									<li class="col"><img class="img-responsive shadow" src="img/ensalada-tpmate.jpg" alt=""></li>
+									<li class="col"><img class="img-responsive shadow" src="img/tostadas.jpg" alt=""></li>
 								</ul>
 							</div>
 							<!-- FIN Slider producto -->
@@ -185,7 +185,9 @@
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sapiente dolor iure. Fugiat nihil amet maxime officiis eum! Voluptate consequuntur alias atque minus! Blanditiis eveniet, accusamus assumenda voluptatem, dolorem esse cupiditate dolorum unde ducimus, fugit similique. Dolore facilis voluptate tempora illo quo saepe mollitia voluptatibus nulla inventore? Perspiciatis nihil dolorem distinctio.</p>								
 								</div>
 								<div class="row select-amount mt-5">
-									<div class="col-4 add-substract">
+
+									<div class="col-5 add-substract">
+										<span class="align-self-center me-2">Cantidad</span>
 										<button class="decrement">-</button>
 										<input type="text" value="3">
 										<button class="increment">+</button>
