--- a/index.html
+++ b/index.html
@@ -173,126 +173,154 @@
 						</div>
 						<div class="row card-items">
 							<!-- un destacado -->
-							<div class="col-3">
-								<div class="card-item ">
-									<!-- imagen destacado -->
-									<div class="card-item-img">
-										<img src="img/ensalada-tpmate.jpg" alt="">
-									</div>
-									<!-- FIN imagen destacado -->
-									<!-- Titulo destacado -->
-									<div class="card-item-title">
-										<h3 class="color-principal">Ensalada de tomate con tortilla</h3>
-									</div>
-									<!-- FIN Titulo destacado -->
-									<!-- Categoria destacado -->
-									<div class="card-item-category">
-										<p>Ensaladas</p>
-									</div>
-									<!-- FIN Categoria destacado -->
-									<!-- Descripcion destacado -->
-									<div class="card-item-description">
-										<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
-									</div>
-									<!-- FIN Descripcion destacado -->
-									<!-- Precio item -->
-									<div class="card-item-price">
-										<p>9 €</p>
+							<div class="col-12 col-sm-6 col-lg-3">
+								<div class="card-item mantener-alto">
+									<div>
+										<!-- imagen destacado -->
+										<div class="card-item-img square">
+											<div class="content">
+												<img src="img/pexels-pixabay-461198.jpg" alt="">
+											</div>
+										</div>
+										<!-- FIN imagen destacado -->
+										<!-- Titulo destacado -->
+										<div class="card-item-title">
+											<h3 class="color-principal">Ensalada de tomate con tortilla</h3>
+										</div>
+										<!-- FIN Titulo destacado -->
+										<!-- Categoria destacado -->
+										<div class="card-item-category">
+											<p>Ensaladas</p>
+										</div>
+										<!-- FIN Categoria destacado -->
+										<!-- Descripcion destacado -->
+										<div class="card-item-description">
+											<p class="ellipsis">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
+										</div>
+										<!-- FIN Descripcion destacado -->
+										<!-- Precio item -->
+										<div class="card-item-price">
+											<p>9 €</p>
+										</div>
 									</div>
 									<!-- FIN precio item -->
+									<div>
+										<button class="btn btn-principal mt-3">Comprar</button>
+									</div>
 								</div>
 							</div>
 							<!-- FIN un destacado -->
 							<!-- un destacado -->
-							<div class="col-3">
-								<div class="card-item h-100">
-									<!-- imagen destacado -->
-									<div class="card-item-img">
-										<img src="img/espaguetti.jpg" alt="">
+							<div class="col-12 col-sm-6 col-lg-3">
+								<div class="card-item mantener-alto">
+									<div>
+										<!-- imagen destacado -->
+										<div class="card-item-img square">
+											<div class="content">
+												<img src="img/pexels-pixabay-461198.jpg" alt="">
+											</div>
+										</div>
+										<!-- FIN imagen destacado -->
+										<!-- Titulo destacado -->
+										<div class="featured-item-title">
+											<h3 class="color-principal">Espaguettis con verduras variadas</h3>
+										</div>
+										<!-- FIN Titulo destacado -->
+										<!-- Categoria destacado -->
+										<div class="card-item-category">
+											<p>Pastas</p>
+										</div>
+										<!-- FIN Categoria destacado -->
+										<!-- Descripcion destacado -->
+										<div class="card-item-description">
+											<p class="ellipsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos possimus odio delectus ullam, alias libero. Molestiae, qui. Eveniet deleniti ullam eligendi dolor eius fugiat.</p>
+										</div>
+										<!-- FIN Descripcion destacado -->
+										<!-- Precio item -->
+										<div class="card-item-price">
+											<p>12 €</p>
+										</div>
+										<!-- FIN precio item -->
 									</div>
-									<!-- FIN imagen destacado -->
-									<!-- Titulo destacado -->
-									<div class="featured-item-title">
-										<h3 class="color-principal">Espaguettis con verduras variadas</h3>
+									<div>
+										<button class="btn btn-principal mt-3">Comprar</button>
 									</div>
-									<!-- FIN Titulo destacado -->
-									<!-- Categoria destacado -->
-									<div class="card-item-category">
-										<p>Pastas</p>
-									</div>
-									<!-- FIN Categoria destacado -->
-									<!-- Descripcion destacado -->
-									<div class="card-item-description">
-										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos possimus odio delectus ullam, alias libero. Molestiae, qui. Eveniet deleniti ullam eligendi dolor eius fugiat.</p>
-									</div>
-									<!-- FIN Descripcion destacado -->
-									<!-- Precio item -->
-									<div class="card-item-price">
-										<p>12 €</p>
-									</div>
-									<!-- FIN precio item -->
 								</div>
 							</div>
 							<!-- FIN un destacado -->
 							<!-- un destacado -->
-							<div class="col-3">
-								<div class="card-item h-100">
+							<div class="col-12 col-sm-6 col-lg-3">
+								<div class="card-item mantener-alto">
 									<!-- imagen destacado -->
-									<div class="card-item-img">
-										<img src="img/tostadas.jpg" alt="">
+									<div>
+										<div class="card-item-img square">
+											<div class="content">
+												<img src="img/pexels-pixabay-461198.jpg" alt="">
+											</div>
+										</div>
+										<!-- FIN imagen destacado -->
+										<!-- Titulo destacado -->
+										<div class="featured-item-title">
+											<h3 class="color-principal">Ensalada de tomate y tortilla</h3>
+										</div>
+										<!-- FIN Titulo destacado -->
+										<!-- Categoria destacado -->
+										<div class="card-item-category">
+											<p>Sandwiches</p>
+										</div>
+										<!-- FIN Categoria destacado -->
+										<!-- Descripcion destacado -->
+										<div class="card-item-description">
+											<p class="ellipsis">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut. </p>
+										</div>
+										<!-- FIN Descripcion destacado -->
+										<!-- Precio item -->
+										<div class="card-item-price">
+											<p>6.5 €</p>
+										</div>
+										<!-- FIN precio item -->
 									</div>
-									<!-- FIN imagen destacado -->
-									<!-- Titulo destacado -->
-									<div class="featured-item-title">
-										<h3 class="color-principal">Ensalada de tomate y tortilla</h3>
+									<div>
+										<button class="btn btn-principal mt-3">Comprar</button>
 									</div>
-									<!-- FIN Titulo destacado -->
-									<!-- Categoria destacado -->
-									<div class="card-item-category">
-										<p>Sandwiches</p>
-									</div>
-									<!-- FIN Categoria destacado -->
-									<!-- Descripcion destacado -->
-									<div class="card-item-description">
-										<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
-									</div>
-									<!-- FIN Descripcion destacado -->
-									<!-- Precio item -->
-									<div class="card-item-price">
-										<p>6.5 €</p>
-									</div>
-									<!-- FIN precio item -->
 								</div>
 							</div>
 							<!-- FIN un destacado -->
 							<!-- un destacado -->
-							<div class="col-3">
-								<div class="card-item h-100">
-									<!-- imagen destacado -->
-									<div class="card-item-img">
-										<img src="img/tomate-aguacate.jpg" alt="">
+							<div class="col-12 col-sm-6 col-lg-3">
+								<div class="card-item mantener-alto">
+									<div>
+										<!-- imagen destacado -->
+										<div class="card-item-img square">
+											<div class="content">
+												<img src="img/pexels-pixabay-461198.jpg" alt="">
+											</div>
+										</div>
+										<!-- FIN imagen destacado -->
+										<!-- Titulo destacado -->
+										<div class="featured-item-title">
+											<h3 class="color-principal">Ensalada de tomate y tortilla</h3>
+										</div>
+										<!-- FIN Titulo destacado -->
+										<!-- Categoria destacado -->
+										<div class="card-item-category">
+											<p>Tortitas</p>
+										</div>
+										<!-- FIN Categoria destacado -->
+										<!-- Descripcion destacado -->
+										<div class="card-item-description">
+											<p class="ellipsis">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut ratione qui nulla debitis? Earum obcaecati saepe enim qui, quos placeat.</p>
+										</div>
+										<!-- FIN Descripcion destacado -->
+										<!-- Precio item -->
+										<div class="card-item-price">
+											<p>8 €</p>
+										</div>
+										<!-- FIN precio item -->
 									</div>
-									<!-- FIN imagen destacado -->
-									<!-- Titulo destacado -->
-									<div class="featured-item-title">
-										<h3 class="color-principal">Ensalada de tomate y tortilla</h3>
+									<div>
+										<button class="btn btn-principal mt-3">Comprar</button>
 									</div>
-									<!-- FIN Titulo destacado -->
-									<!-- Categoria destacado -->
-									<div class="card-item-category">
-										<p>Tortitas</p>
-									</div>
-									<!-- FIN Categoria destacado -->
-									<!-- Descripcion destacado -->
-									<div class="card-item-description">
-										<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut ratione qui nulla debitis? Earum obcaecati saepe enim qui, quos placeat.</p>
-									</div>
-									<!-- FIN Descripcion destacado -->
-									<!-- Precio item -->
-									<div class="card-item-price">
-										<p>8 €</p>
-									</div>
-									<!-- FIN precio item -->
 								</div>
 							</div>
 							<!-- FIN un destacado -->
