--- a/producto.html
+++ b/producto.html
@@ -158,17 +158,49 @@
 							<div class="col-6 slider-gallery">
 								<div class="row">
 									<div class="col">
-										<div class="slider-gallery-img">
-											<img class="img-responsive" src="img/tomate-aguacate.jpg" alt="">
+										<div class="slider-gallery-img square">
+											<div class="content">
+												<img class="img-responsive" src="img/pexels-pixabay-461198.jpg" alt="">
+											</div>
 										</div>
 									</div>
 								</div>
 								<ul class="row slider-gallery-thumbnails">
-									<li class="col"><img class="img-responsive shadow" src="img/tomate-aguacate.jpg" alt=""></li>
-									<li class="col"><img class="img-responsive shadow" src="img/espaguetti.jpg" alt=""></li>
-									<li class="col"><img class="img-responsive shadow" src="img/ensalada.jpg" alt=""></li>
-									<li class="col"><img class="img-responsive shadow" src="img/ensalada-tpmate.jpg" alt=""></li>
-									<li class="col"><img class="img-responsive shadow" src="img/tostadas.jpg" alt=""></li>
+									<li class="col">
+										<div class="square">
+											<div class="content">
+												<img class="img-responsive shadow" src="img/pexels-pixabay-461198.jpg" alt="">
+											</div>
+										</div>
+									</li>
+									<li class="col">
+										<div class="square">
+											<div class="content">
+												<img class="img-responsive shadow" src="img/pexels-pixabay-461198.jpg" alt="">
+											</div>
+										</div>
+									</li>
+									<li class="col">
+										<div class="square">
+											<div class="content">
+												<img class="img-responsive shadow" src="img/pexels-pixabay-461198.jpg" alt="">
+											</div>
+										</div>
+									</li>
+									<li class="col">
+										<div class="square">
+											<div class="content">
+												<img class="img-responsive shadow" src="img/pexels-pixabay-461198.jpg" alt="">
+											</div>
+										</div>
+									</li>
+									<li class="col">
+										<div class="square">
+											<div class="content">
+												<img class="img-responsive shadow" src="img/pexels-pixabay-461198.jpg" alt="">
+											</div>
+										</div>
+									</li>
 								</ul>
 							</div>
 							<!-- FIN Slider producto -->
