--- a/productos.html
+++ b/productos.html
@@ -198,187 +198,211 @@
 								<div class="row mt-5">
 									<!-- un producto -->
 									<div class="col-4 products-gallery-item card mb-4">
-										<div class="card-item h-100">
-											<!-- imagen destacado -->
-											<div class="card-item-img">
-												<img src="img/ensalada.jpg" alt="">
+										<div class="card-item mantener-alto">
+											<div>
+												<!-- imagen destacado -->
+												<div class="card-item-img square">
+													<div class="content">
+														<img src="img/pexels-pixabay-461198.jpg" alt="">
+													</div>
+												</div>
+												<!-- FIN imagen destacado -->
+												<!-- Titulo destacado -->
+												<div class="card-item-title">
+													<h3 class="color-principal">Ensalada de lechuga, escarola y hoja de roble</h3>
+												</div>
+												<!-- FIN Titulo destacado -->
+												<!-- Categoria destacado -->
+												<div class="card-item-category">
+													<p>Ensaladas</p>
+												</div>
+												<!-- FIN Categoria destacado -->
+												<!-- Descripcion destacado -->
+												<div class="card-item-description">
+													<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor assumenda obcaecati nisi magnam quam ut.</p>
+												</div>
+												<!-- FIN Descripcion destacado -->
+												<!-- Precio item -->
+												<div class="card-item-price">
+													<p>9 €</p>
+												</div>
+												<!-- FIN precio item -->
 											</div>
-											<!-- FIN imagen destacado -->
-											<!-- Titulo destacado -->
-											<div class="card-item-title">
-												<h3 class="color-principal">Ensalada de lechuga, escarola y hoja de roble</h3>
-											</div>
-											<!-- FIN Titulo destacado -->
-											<!-- Categoria destacado -->
-											<div class="card-item-category">
-												<p>Ensaladas</p>
-											</div>
-											<!-- FIN Categoria destacado -->
-											<!-- Descripcion destacado -->
-											<div class="card-item-description">
-												<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor assumenda obcaecati nisi magnam quam ut.</p>
-											</div>
-											<!-- FIN Descripcion destacado -->
-											<!-- Precio item -->
-											<div class="card-item-price">
-												<p>9 €</p>
-											</div>
-											<!-- FIN precio item -->
 										</div>	
 									</div>
 									<!-- FIN un producto -->
 									<!-- un producto -->
 									<div class="col-4 products-gallery-item card mb-4">
-										<div class="card-item h-100">
-											<!-- imagen destacado -->
-											<div class="card-item-img">
-												<img src="img/ensalada-tpmate.jpg" alt="">
+										<div class="card-item mantener-alto">
+											<div>
+												<!-- imagen destacado -->
+												<div class="card-item-img square">
+													<div class="content">
+														<img src="img/pexels-pixabay-461198.jpg" alt="">
+													</div>
+												</div>
+												<!-- FIN imagen destacado -->
+												<!-- Titulo destacado -->
+												<div class="card-item-title">
+													<h3 class="color-principal">Ensalada de tomate con tortilla</h3>
+												</div>
+												<!-- FIN Titulo destacado -->
+												<!-- Categoria destacado -->
+												<div class="card-item-category">
+													<p>Ensaladas</p>
+												</div>
+												<!-- FIN Categoria destacado -->
+												<!-- Descripcion destacado -->
+												<div class="card-item-description">
+													<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
+												</div>
+												<!-- FIN Descripcion destacado -->
+												<!-- Precio item -->
+												<div class="card-item-price">
+													<p>12 €</p>
+												</div>
+												<!-- FIN precio item -->
 											</div>
-											<!-- FIN imagen destacado -->
-											<!-- Titulo destacado -->
-											<div class="card-item-title">
-												<h3 class="color-principal">Ensalada de tomate con tortilla</h3>
-											</div>
-											<!-- FIN Titulo destacado -->
-											<!-- Categoria destacado -->
-											<div class="card-item-category">
-												<p>Ensaladas</p>
-											</div>
-											<!-- FIN Categoria destacado -->
-											<!-- Descripcion destacado -->
-											<div class="card-item-description">
-												<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
-											</div>
-											<!-- FIN Descripcion destacado -->
-											<!-- Precio item -->
-											<div class="card-item-price">
-												<p>12 €</p>
-											</div>
-											<!-- FIN precio item -->
 										</div>	
 									</div>
 									<!-- FIN un producto -->
 									<!-- un producto -->
 									<div class="col-4 products-gallery-item card mb-4">
-										<div class="card-item h-100">
-											<!-- imagen destacado -->
-											<div class="card-item-img">
-												<img src="img/espaguetti.jpg" alt="">
+										<div class="card-item mantener-alto">
+											<div>
+												<!-- imagen destacado -->
+												<div class="card-item-img square">
+													<div class="content">
+														<img src="img/pexels-pixabay-461198.jpg" alt="">
+													</div>
+												</div>
+												<!-- FIN imagen destacado -->
+												<!-- Titulo destacado -->
+												<div class="card-item-title">
+													<h3 class="color-principal">Espaguettis al Pesto</h3>
+												</div>
+												<!-- FIN Titulo destacado -->
+												<!-- Categoria destacado -->
+												<div class="card-item-category">
+													<p>Pastas</p>
+												</div>
+												<!-- FIN Categoria destacado -->
+												<!-- Descripcion destacado -->
+												<div class="card-item-description">
+													<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
+												</div>
+												<!-- FIN Descripcion destacado -->
+												<!-- Precio item -->
+												<div class="card-item-price">
+													<p>6.5 €</p>
+												</div>
+												<!-- FIN precio item -->
 											</div>
-											<!-- FIN imagen destacado -->
-											<!-- Titulo destacado -->
-											<div class="card-item-title">
-												<h3 class="color-principal">Espaguettis al Pesto</h3>
-											</div>
-											<!-- FIN Titulo destacado -->
-											<!-- Categoria destacado -->
-											<div class="card-item-category">
-												<p>Pastas</p>
-											</div>
-											<!-- FIN Categoria destacado -->
-											<!-- Descripcion destacado -->
-											<div class="card-item-description">
-												<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
-											</div>
-											<!-- FIN Descripcion destacado -->
-											<!-- Precio item -->
-											<div class="card-item-price">
-												<p>6.5 €</p>
-											</div>
-											<!-- FIN precio item -->
 										</div>	
 									</div>
 									<!-- FIN un producto -->
 									<!-- un producto -->
 									<div class="col-4 products-gallery-item card mb-4">
-										<div class="card-item h-100">
-											<!-- imagen destacado -->
-											<div class="card-item-img">
-												<img src="img/garbanzos.jpg" alt="">
+										<div class="card-item mantener-alto">
+											<div>
+												<!-- imagen destacado -->
+												<div class="card-item-img square">
+													<div class="content">
+														<img src="img/pexels-pixabay-461198.jpg" alt="">
+													</div>
+												</div>
+												<!-- FIN imagen destacado -->
+												<!-- Titulo destacado -->
+												<div class="card-item-title">
+													<h3 class="color-principal">Garbanzos con espinacas y pepino</h3>
+												</div>
+												<!-- FIN Titulo destacado -->
+												<!-- Categoria destacado -->
+												<div class="card-item-category">
+													<p>Legumbres</p>
+												</div>
+												<!-- FIN Categoria destacado -->
+												<!-- Descripcion destacado -->
+												<div class="card-item-description">
+													<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
+												</div>
+												<!-- FIN Descripcion destacado -->
+												<!-- Precio item -->
+												<div class="card-item-price">
+													<p>11 €</p>
+												</div>
+												<!-- FIN precio item -->
 											</div>
-											<!-- FIN imagen destacado -->
-											<!-- Titulo destacado -->
-											<div class="card-item-title">
-												<h3 class="color-principal">Garbanzos con espinacas y pepino</h3>
-											</div>
-											<!-- FIN Titulo destacado -->
-											<!-- Categoria destacado -->
-											<div class="card-item-category">
-												<p>Legumbres</p>
-											</div>
-											<!-- FIN Categoria destacado -->
-											<!-- Descripcion destacado -->
-											<div class="card-item-description">
-												<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
-											</div>
-											<!-- FIN Descripcion destacado -->
-											<!-- Precio item -->
-											<div class="card-item-price">
-												<p>11 €</p>
-											</div>
-											<!-- FIN precio item -->
 										</div>	
 									</div>
 									<!-- FIN un producto -->
 									<!-- un producto -->
 									<div class="col-4 products-gallery-item card mb-4">
-										<div class="card-item h-100">
-											<!-- imagen destacado -->
-											<div class="card-item-img">
-												<img src="img/tomate-aguacate.jpg" alt="">
+										<div class="card-item mantener-alto">
+											<div>
+												<!-- imagen destacado -->
+												<div class="card-item-img square">
+													<div class="content">
+														<img src="img/pexels-pixabay-461198.jpg" alt="">
+													</div>
+												</div>
+												<!-- FIN imagen destacado -->
+												<!-- Titulo destacado -->
+												<div class="card-item-title">
+													<h3 class="color-principal">Tomate con aguacates frescos de nuestra huerta</h3>
+												</div>
+												<!-- FIN Titulo destacado -->
+												<!-- Categoria destacado -->
+												<div class="card-item-category">
+													<p>Hortalizas</p>
+												</div>
+												<!-- FIN Categoria destacado -->
+												<!-- Descripcion destacado -->
+												<div class="card-item-description">
+													<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
+												</div>
+												<!-- FIN Descripcion destacado -->
+												<!-- Precio item -->
+												<div class="card-item-price">
+													<p>9 €</p>
+												</div>
+												<!-- FIN precio item -->
 											</div>
-											<!-- FIN imagen destacado -->
-											<!-- Titulo destacado -->
-											<div class="card-item-title">
-												<h3 class="color-principal">Tomate con aguacates frescos de nuestra huerta</h3>
-											</div>
-											<!-- FIN Titulo destacado -->
-											<!-- Categoria destacado -->
-											<div class="card-item-category">
-												<p>Hortalizas</p>
-											</div>
-											<!-- FIN Categoria destacado -->
-											<!-- Descripcion destacado -->
-											<div class="card-item-description">
-												<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
-											</div>
-											<!-- FIN Descripcion destacado -->
-											<!-- Precio item -->
-											<div class="card-item-price">
-												<p>9 €</p>
-											</div>
-											<!-- FIN precio item -->
 										</div>	
 									</div>
 									<!-- FIN un producto -->
 									<!-- un producto -->
 									<div class="col-4 products-gallery-item card mb-4">
-										<div class="card-item h-100">
-											<!-- imagen destacado -->
-											<div class="card-item-img">
-												<img src="img/ensalada.jpg" alt="">
+										<div class="card-item mantener-alto">
+											<div>
+												<!-- imagen destacado -->
+												<div class="card-item-img square">
+													<div class="content">
+														<img src="img/pexels-pixabay-461198.jpg" alt="">
+													</div>
+												</div>
+												<!-- FIN imagen destacado -->
+												<!-- Titulo destacado -->
+												<div class="card-item-title">
+													<h3 class="color-principal">Ensalada con brotes</h3>
+												</div>
+												<!-- FIN Titulo destacado -->
+												<!-- Categoria destacado -->
+												<div class="card-item-category">
+													<p>Ensaladas</p>
+												</div>
+												<!-- FIN Categoria destacado -->
+												<!-- Descripcion destacado -->
+												<div class="card-item-description">
+													<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
+												</div>
+												<!-- FIN Descripcion destacado -->
+												<!-- Precio item -->
+												<div class="card-item-price">
+													<p>9 €</p>
+												</div>
+												<!-- FIN precio item -->
 											</div>
-											<!-- FIN imagen destacado -->
-											<!-- Titulo destacado -->
-											<div class="card-item-title">
-												<h3 class="color-principal">Ensalada con brotes</h3>
-											</div>
-											<!-- FIN Titulo destacado -->
-											<!-- Categoria destacado -->
-											<div class="card-item-category">
-												<p>Ensaladas</p>
-											</div>
-											<!-- FIN Categoria destacado -->
-											<!-- Descripcion destacado -->
-											<div class="card-item-description">
-												<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
-											</div>
-											<!-- FIN Descripcion destacado -->
-											<!-- Precio item -->
-											<div class="card-item-price">
-												<p>9 €</p>
-											</div>
-											<!-- FIN precio item -->
 										</div>	
 									</div>
 									<!-- FIN un producto -->																											
