Modificado menu aside de la pagina de productos y puesto en sticky

--- a/carrito.html
+++ b/carrito.html
@@ -156,8 +156,7 @@
                     <!-- H1 de la pagina -->
                     <div class="row">
                         <h1 class="col-12 text-align-center color-principal">Carrito de la compra</h1>
-                    </div>
-                    
+                    </div>                    
                     <!-- FIN H1 de la pagina -->
                     <!-- listado productos carrito -->
                     <div class="carrito-products">
@@ -181,7 +180,7 @@
                                         <div class="conten-img">
                                             <div class="square">
                                                 <div class="content">
-                                                    <img class="img-responsive" src="img/pexels-pixabay-461198.jpg" alt="">
+                                                    <img class="img-responsive" src="img/ensalada-tpmate.jpg" alt="">
                                                 </div>
                                             </div>
                                         </div>
@@ -212,7 +211,7 @@
                                         <div class="conten-img">
                                             <div class="square">
                                                 <div class="content">
-                                                    <img class="img-responsive" src="img/pexels-pixabay-461198.jpg" alt="">
+                                                    <img class="img-responsive" src="img/ensalada.jpg" alt="">
                                                 </div>
                                             </div>
                                         </div>
@@ -243,7 +242,7 @@
                                         <div class="conten-img">
                                             <div class="square">
                                                 <div class="content">
-                                                    <img class="img-responsive" src="img/pexels-pixabay-461198.jpg" alt="">
+                                                    <img class="img-responsive" src="img/espaguetti.jpg" alt="">
                                                 </div>
                                             </div>
                                         </div>
@@ -274,7 +273,7 @@
                                         <div class="conten-img">
                                             <div class="square">
                                                 <div class="content">
-                                                    <img class="img-responsive" src="img/pexels-pixabay-461198.jpg" alt="">
+                                                    <img class="img-responsive" src="img/tostadas.jpg" alt="">
                                                 </div>
                                             </div>
                                         </div>
