--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
 				<!-- Slider -->
 				<div class="slider">
 					<div class="slider-img w-100">
-						<img class="w-100" src="img\pexels-adonyi-gábor-1414651.jpg" alt="">
+						<img class="w-100" src="img/pexels-adonyi-gábor-1414651.jpg" alt="">
 					</div>
-					<div class="row slider-info flex-column"">
+					<div class="row slider-info flex-column">
 						<div class="col-auto slider-info-title">
 							<h1>Disfruta de los mejores platos<br>de manera saludable</h1>
 						</div>
@@ -179,7 +179,7 @@
 										<!-- imagen destacado -->
 										<div class="card-item-img square">
 											<div class="content">
-												<img src="img/pexels-pixabay-461198.jpg" alt="">
+												<img src="img/ensalada-tpmate.jpg" alt="">
 											</div>
 										</div>
 										<!-- FIN imagen destacado -->
@@ -217,7 +217,7 @@
 										<!-- imagen destacado -->
 										<div class="card-item-img square">
 											<div class="content">
-												<img src="img/pexels-pixabay-461198.jpg" alt="">
+												<img src="img/ensalada.jpg" alt="">
 											</div>
 										</div>
 										<!-- FIN imagen destacado -->
@@ -255,7 +255,7 @@
 									<div>
 										<div class="card-item-img square">
 											<div class="content">
-												<img src="img/pexels-pixabay-461198.jpg" alt="">
+												<img src="img/espaguetti.jpg" alt="">
 											</div>
 										</div>
 										<!-- FIN imagen destacado -->
@@ -293,7 +293,7 @@
 										<!-- imagen destacado -->
 										<div class="card-item-img square">
 											<div class="content">
-												<img src="img/pexels-pixabay-461198.jpg" alt="">
+												<img src="img/tostadas.jpg" alt="">
 											</div>
 										</div>
 										<!-- FIN imagen destacado -->
