--- a/producto.html
+++ b/producto.html
@@ -160,7 +160,7 @@
 									<div class="col">
 										<div class="slider-gallery-img square">
 											<div class="content">
-												<img class="img-responsive" src="img/pexels-pixabay-461198.jpg" alt="">
+												<img class="img-responsive" src="img/ensalada-tpmate.jpg" alt="">
 											</div>
 										</div>
 									</div>
@@ -169,35 +169,35 @@
 									<li class="col">
 										<div class="square">
 											<div class="content">
-												<img class="img-responsive shadow" src="img/pexels-pixabay-461198.jpg" alt="">
+												<img class="img-responsive shadow" src="img/ensalada.jpg" alt="">
 											</div>
 										</div>
 									</li>
 									<li class="col">
 										<div class="square">
 											<div class="content">
-												<img class="img-responsive shadow" src="img/pexels-pixabay-461198.jpg" alt="">
+												<img class="img-responsive shadow" src="img/espaguetti.jpg" alt="">
 											</div>
 										</div>
 									</li>
 									<li class="col">
 										<div class="square">
 											<div class="content">
-												<img class="img-responsive shadow" src="img/pexels-pixabay-461198.jpg" alt="">
+												<img class="img-responsive shadow" src="img/garbanzos.jpg" alt="">
 											</div>
 										</div>
 									</li>
 									<li class="col">
 										<div class="square">
 											<div class="content">
-												<img class="img-responsive shadow" src="img/pexels-pixabay-461198.jpg" alt="">
+												<img class="img-responsive shadow" src="img/tomate-aguacate.jpg" alt="">
 											</div>
 										</div>
 									</li>
 									<li class="col">
 										<div class="square">
 											<div class="content">
-												<img class="img-responsive shadow" src="img/pexels-pixabay-461198.jpg" alt="">
+												<img class="img-responsive shadow" src="img/tostadas.jpg" alt="">
 											</div>
 										</div>
 									</li>
