--- a/productos.html
+++ b/productos.html
@@ -151,7 +151,12 @@
 			<!-- FIN Header -->
 			<!-- Main -->
 			<main>
-				<div class="container">
+				<div class="container section">
+					<!-- H1 de la pagina -->
+					<div class="row">
+						<h1 class="col-12 text-align-center color-principal">Listado de productos</h1>
+					</div>                    
+					<!-- FIN H1 de la pagina -->
 					<div class="row section">
 						<div class="col-3">
 							<!-- Categorias -->
@@ -203,7 +208,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/pexels-pixabay-461198.jpg" alt="">
+														<img src="img/ensalada-tpmate.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
@@ -238,7 +243,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/pexels-pixabay-461198.jpg" alt="">
+														<img src="img/ensalada.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
@@ -273,7 +278,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/pexels-pixabay-461198.jpg" alt="">
+														<img src="img/espaguetti.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
@@ -308,7 +313,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/pexels-pixabay-461198.jpg" alt="">
+														<img src="img/garbanzos.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
@@ -343,7 +348,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/pexels-pixabay-461198.jpg" alt="">
+														<img src="img/tomate-aguacate.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
@@ -378,7 +383,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/pexels-pixabay-461198.jpg" alt="">
+														<img src="img/tostadas.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
